# VS_tesis

./: .gitignore  Readme.md  pyproject.toml
diagrams/: mindmap.mmd
